/*  $Id: Changelog,v 1.319 2010/08/20 15:33:42 ptsarenko Exp $  */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-01-03 16:40 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * include/letocl.h
  * include/rddleto.h
  * source/client/leto1.c
  * source/client/letocl.c
    * New functions added:
      LetoSeek(), LetoDbClearFilter(), LetoDbSetFilter(),
      LetoDbCommit(), LetoDbIsRecLocked(), LetoDbRecLock(),
      LetoDbRecUnLock(), LetoDbFileLock(), LetoDbFileUnLock().
      Few LETOAREA items: pLocksPos, ulLocksMax, ulLocksAlloc, fFLocked
      are moved to LETOTABLE.

2014-01-01 17:25 UTC+0200 Pavel Tsarenko (tpe2/at/mail.ru)
  * source/client/leto1.c
  * source/client/letocl.c
  * source/client/letomgmn.c
    * warnings
  * include/funcleto.h
    - removed LETO_FHANDLE

2013-12-30 11:42 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * tests/c_lang/test_dbf.c
    * test extended

2013-12-30 10:56 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * source/client/letocl.c
    ! Few warnings fixed.

2013-12-30 10:22 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * include/letocl.h
  * include/rddleto.h
  * source/client/leto1.c
  * source/client/letocl.c
    * LetoDbOrderCreate() added, LETOTAGINFO moved from
      rddleto.h to letocl.h and changed - a part of it, which
      contains PHB_ITEMs, is placed in rddleto.h as
      LETOTAGEXTRAINFO.

2013-12-27 15:20 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * include/letocl.h
  * source/client/leto1.c
  * source/client/letocl.c
    * New functions added:
    LetoDbPutField() and LetoDbAppend()
    It's possible now to add data to dbf tables with the C client.
  * tests/c_lang/test_dbf.c
    * test extended with append record to dbf

2013-12-27 12:46 UTC+0300 Alexander Kresin (alex/at/belacy.ru)
  * include/letocl.h
  * include/rddleto.h
  * source/client/leto1.c